[package]
name = "ess_clients"
version = "0.1.0"
edition = "2021"
description = "Support package for accessing the ESS PAM service"
rust-version = "1.60"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["security", "pam", "linux"]
build = "build.rs"
exclude = [".vscode", "certs"]
repository = "https://github.com/catalin-h/ess_clients"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
panic = "abort"
codegen-units = 1

[[bin]]
name = "ess_admin"
path = "src/main.rs"

[lib]
name = "ess"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies.hyper-rustls]
version = "^0.23"
default-features = false
features = ["tokio-runtime", "native-tokio", "http1", "logging"]

[dependencies.rustls]
version = "^0.20"
default-features = false

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.hyper]
version = "0.14"
features = ["client", "http1"]

[dependencies.log]
version = "^0.4"
features = ["std"]

[dependencies]
anyhow = "1.0"
clap = { version = "^3.2", features = ["derive"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
rustls-pemfile = "^1"
hyper-timeout = "^0.4"

[build-dependencies]
cbindgen = "^0.24"
